Nav buttons formatted

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         </h3> 
             <div class="container horizontal-scrollable"> 
                 <div class="row text-center" style="overflow:   scroll; /* Hide scrollbars */"> 
-                    <button class="col-xs-4 navButtons">1</button> 
-                    <button class="col-xs-4 navButtons">2</button> 
-                    <button class="col-xs-4 navButtons">3</button> 
-                    <button class="col-xs-4 navButtons">4</button> 
-                    <button class="col-xs-4 navButtons">5</button> 
-                    <button class="col-xs-4 navButtons">6</button> 
-                    <button class="col-xs-4 navButtons">7</button> 
+                    <button class=" navButtons">My Account</button> 
+                    <button class=" navButtons">Recipe Book</button> 
+                    <button class=" navButtons">wrtherth3</button> 
+                    <button class=" navButtons">rthert4</button> 
+                    <button class=" navButtons">rthe5</button> 
+                    <button class=" navButtons">6</button> 
+                    <button class=" navButtons">7</button> 
                 </div> 
             </div> 
         </div> 
