--- a/test.html
+++ b/test.html
@@ -54,9 +54,10 @@
             <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Backdrop with scrolling</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-        <div class="offcanvas-body">
+        <div class="offcanvas-body" style="background-color: aqua;">
             <p>Try scrolling the rest of the page to see this option in action.</p>
         </div>
+        
     </div>
 
 
