--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
     <center>
 
 
-        <h3>
-            To make horizontal scrollable in a bootstrap row?
-        </h3>
+
+            <p style="font-size: 70px;font-family: 'Rubik';font-weight: 650;">WELCOME</p>
+
         <div class="container horizontal-scrollable" id="">
             <div class="horizontal-scrollableNavRow text-center"
                 style="overflow: scroll; padding-right: 15px; /* Hide scrollbars */">
