index html page has all most refined code

--- a/employeeWelcome.html
+++ b/employeeWelcome.html
@@ -8,44 +8,49 @@
 
     </script>
 
-    <!-- FONT IMPORTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+MX:wght@100..400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"rel="stylesheet">
 
-
-
-    <!-- BOOTSTRAP INPORT -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-    <!-- IMPORT LOCAL CSS FILE -->
     <link rel="stylesheet" href="main.css">
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
     <style>
-        /* do not edit below */
+        /* The heart of the matter */
+
+
         a {
             color: inherit;
+            /* blue colors for links too */
             text-decoration: inherit;
+            /* no underline */
         }
 
         a:hover {
             color: initial;
+            /* Takes initial value of the property which is black in this case */
             text-decoration: inherit;
         }
-        /* .mainLogo{
-            max-width: 50%; height: auto;
+        .mainLogo{
+            max-width: 50%; height: auto; 
             margin: auto;
-            display: block;
-        } */
-        /* do not edit above */
+            display: block; 
+        }
+        
 
     </style>
 </head>
@@ -54,7 +59,7 @@
 
 
 
-<!-- BELOW IS THE NAVBAR WITH LOGO -->
+
     <nav class="navbar navbar-expand-lg navbar-light ">
         <div class="container" id="removePadding" style="padding-right: 0px; background-color: var(--PrimaryColor)">
 
@@ -76,17 +81,45 @@
                     display: block;margin-bottom: 50px;margin: 0; padding-top: 30px;">
 
             </div>
+
         </div>
+
+
+
+
+
+
     </nav>
+
+
+    <div class="row">
+
+
+
+
+
+
+
+
     </div>
-<!-- ABOVE IS THE NAVBAR WITH LOGO -->
 
 
 
 
 
-<!-- THIS IS THE QUICK ACCSESS SCROLL MENU FOR WELCOME PAGE -->
+
+
+    </div>
+
+
+
+
+
+
     <center>
+
+
+
             <p style="font-size: 70px;font-family: 'Rubik';font-weight: 650;">WELCOME</p>
 
         <div class="container horizontal-scrollable" id="">
@@ -103,7 +136,6 @@
         </div>
         </div>
     </center>
-<!-- ABOVE IS THE QUICK ACCSESS SCROLL MENU FOR WELCOME PAGE -->
 
 
 
@@ -111,12 +143,7 @@
 
 
 
-<!-- THIS IS THE MENU ONCE OPEN -->
-<!-- THIS IS THE MENU ONCE OPEN -->
-<!-- THIS IS THE MENU ONCE OPEN -->
-<!-- THIS IS THE MENU ONCE OPEN -->
-<!-- THIS IS THE MENU ONCE OPEN -->
-<!-- THIS IS THE MENU ONCE OPEN -->
+
 
 
     <div class="offcanvas offcanvas-start row" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
@@ -126,7 +153,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" style="padding: 20px;"   aria-label="Close"></button>
         </div>
         <div class=" container " id="removePadding" style="text-align: center; border-radius: 30px;">
-            <img class="mainLogo" src="img/main_logo.png" alt="logo" >
+            <img class="mainLogo" src="img/main_logo.png" alt="logo" style="">
 
         </div>
 
@@ -151,11 +178,6 @@
 
     </div>
 
-<!-- ABOVE IS THE MENU ONCE OPEN -->
-<!-- ABOVE IS THE MENU ONCE OPEN -->
-<!-- ABOVE IS THE MENU ONCE OPEN -->
-<!-- ABOVE IS THE MENU ONCE OPEN -->
-<!-- ABOVE IS THE MENU ONCE OPEN -->
 
 
 
