--- a/index.html
+++ b/index.html
@@ -132,19 +132,19 @@
 
         <div class="offcanvas-body container row" style="padding-right: 0px;">
 
-            <a href="http://127.0.0.1:5500/index.html">
+            <a href="http://127.0.0.1:5500/index.html" id="removePadding">
                 <p class="sideBar">My Account</p>
             </a>
 
-            <a href="http://127.0.0.1:5500/index.html">
+            <a href="http://127.0.0.1:5500/index.html" id="removePadding">
                 <p class="sideBar">Training</p>
             </a>
 
-            <a href="http://127.0.0.1:5500/index.html">
+            <a href="http://127.0.0.1:5500/index.html" id="removePadding">
                 <p class="sideBar">Cook Book</p>
             </a>
 
-            <a href="http://127.0.0.1:5500/index.html">
+            <a href="http://127.0.0.1:5500/index.html" id="removePadding">
                 <p class="sideBar">Contact Info</p>
             </a>
         </div>
