My account compete. Menu mainly complete need to chanage contact us

--- a/Template.html
+++ b/Template.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <!-- IMPORT LOCAL CSS FILE -->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -69,13 +69,19 @@
                 <span class=" rounded float-left"></span>
             </div>
 
-
-            <div class=" container row " id="removePadding" style="text-align: center;">
+            <!-- JUST EDITED JUST EDITED JUST EDITED JUST EDITED JUST EDITED JUST EDITED -->
+            <!-- <div class=" container row " id="removePadding" style="text-align: center;">
                 <img class="rounded mx-auto d-block" src="img/text_logo.png" alt="logo" style="max-width: 60%; height: auto;
                     margin: auto;
                     display: block;margin-bottom: 50px;margin: 0; padding-top: 30px;">
 
+            </div> -->
+
+            <div class=" container row " id="removePadding" style="text-align: center;  margin:0px">
+                <a href="employeeWelcome.html"><img class="rounded mx-auto d-block textLogoNavbarImage" src="img/text_logo.png" alt="logo" ></a>
+
             </div>
+
         </div>
     </nav>
     </div>
@@ -111,15 +117,15 @@
 
         <div class="offcanvas-body container row" style="padding-right: 0px;">
 
-            <a href="http://127.0.0.1:5500/index.html" id="removePadding">
+            <a href="myAccount.html" id="removePadding">
                 <p class="sideBar">My Account</p>
             </a>
 
-            <a href="http://127.0.0.1:5500/index.html" id="removePadding">
+            <a href="TrainingMain.html" id="removePadding">
                 <p class="sideBar">Training</p>
             </a>
 
-            <a href="http://127.0.0.1:5500/index.html" id="removePadding">
+            <a href="cookBookMain.html" id="removePadding">
                 <p class="sideBar">Cook Book</p>
             </a>
 
@@ -137,11 +143,13 @@
 <!-- ABOVE IS THE MENU ONCE OPEN -->
 
 
+<!-- WRITE CODE BELOW HERE -->
 
 
 
 
 
+<!-- WRITE CODE ABOVE HERE -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
