Working on the training menu

--- a/MENUTemplate.html
+++ b/MENUTemplate.html
@@ -69,13 +69,19 @@
                 <span class=" rounded float-left"></span>
             </div>
 
-
-            <div class=" container row " id="removePadding" style="text-align: center; margin:0px">
+            <!-- JUST EDITED JUST EDITED JUST EDITED JUST EDITED JUST EDITED JUST EDITED -->
+            <!-- <div class=" container row " id="removePadding" style="text-align: center;">
                 <img class="rounded mx-auto d-block" src="img/text_logo.png" alt="logo" style="max-width: 60%; height: auto;
                     margin: auto;
                     display: block;margin-bottom: 50px;margin: 0; padding-top: 30px;">
 
+            </div> -->
+
+            <div class=" container row " id="removePadding" style="text-align: center;  margin:0px">
+                <a href="employeeWelcome.html"><img class="rounded mx-auto d-block textLogoNavbarImage" src="img/text_logo.png" alt="logo" ></a>
+
             </div>
+
         </div>
     </nav>
     </div>
@@ -83,29 +89,6 @@
 
 
 
-
-
-<!-- THIS IS THE QUICK ACCSESS SCROLL MENU FOR WELCOME PAGE -->
-    <center>
-            <p style="font-size: 70px;font-family: 'Rubik';font-weight: 650; margin: 0px;">WELCOME</p>
-
-
-
-        <div class="container horizontal-scrollable" id="">
-            <div class="horizontal-scrollableNavRow text-center"
-                style="overflow: scroll; padding-right: 15px; /* Hide scrollbars */">
-                <button class=" navButtons">My Account</button>
-                <button class=" navButtons">Recipe Book</button>
-                <button class=" navButtons">Announcements</button>
-                <button class=" navButtons">My Store</button>
-                <button class=" navButtons">rthe5</button>
-                <button class=" navButtons">6</button>
-                <button class=" navButtons">7</button>
-            </div>
-        </div>
-        </div>
-    </center>
-<!-- ABOVE IS THE QUICK ACCSESS SCROLL MENU FOR WELCOME PAGE -->
 
 
 
@@ -160,11 +143,13 @@
 <!-- ABOVE IS THE MENU ONCE OPEN -->
 
 
+<!-- WRITE CODE BELOW HERE -->
 
 
 
 
 
+<!-- WRITE CODE ABOVE HERE -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
