--- a/myAccount.html
+++ b/myAccount.html
@@ -150,7 +150,7 @@
                 <div class="user-profile">
                     <div class="user-avatar" style="align-items: center;">
 
-                        <img class="rounded-circle centerImage profilePicFormat" alt="avatar1" src="img/profile_pic.jpg" />
+                        <img class="rounded-circle centerImage profilePicFormat" alt="avatar1" src="img/MyAccount/profile_pic.jpg" />
                     
                         
                     </div>
