all training main pages attached trying to stop x axis movement

--- a/myAccount.html
+++ b/myAccount.html
@@ -114,7 +114,7 @@
                 <p class="sideBar">My Account</p>
             </a>
 
-            <a href="TrainingMain.html" id="removePadding">
+            <a href="trainingMainALL.html" id="removePadding">
                 <p class="sideBar">Training</p>
             </a>
 
