--- a/trainingMainCOMPLETED.html
+++ b/trainingMainCOMPLETED.html
@@ -14,16 +14,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+MX:wght@100..400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
 
 
 
     <!-- BOOTSTRAP INPORT -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <!-- IMPORT LOCAL CSS FILE -->
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/trainingsection.css">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -40,12 +43,10 @@
             color: initial;
             text-decoration: inherit;
         }
-        /* .mainLogo{
-            max-width: 50%; height: auto;
-            margin: auto;
-            display: block;
-        } */
+
+
         /* do not edit above */
+
 
     </style>
 </head>
@@ -54,7 +55,7 @@
 
 
 
-<!-- BELOW IS THE NAVBAR WITH LOGO -->
+    <!-- BELOW IS THE NAVBAR WITH LOGO -->
     <nav class="navbar navbar-expand-lg navbar-light ">
         <div class="container" id="removePadding" style="padding-right: 0px; background-color: var(--PrimaryColor)">
 
@@ -78,14 +79,15 @@
             </div> -->
 
             <div class=" container row " id="removePadding" style="text-align: center;  margin:0px">
-                <a href="employeeWelcome.html"><img class="rounded mx-auto d-block textLogoNavbarImage" src="img/text_logo.png" alt="logo" ></a>
+                <a href="employeeWelcome.html"><img class="rounded mx-auto d-block textLogoNavbarImage"
+                        src="img/text_logo.png" alt="logo"></a>
 
             </div>
 
         </div>
     </nav>
     </div>
-<!-- ABOVE IS THE NAVBAR WITH LOGO -->
+    <!-- ABOVE IS THE NAVBAR WITH LOGO -->
 
 
 
@@ -96,22 +98,23 @@
 
 
 
-<!-- THIS IS THE MENU ONCE OPEN -->
-<!-- THIS IS THE MENU ONCE OPEN -->
-<!-- THIS IS THE MENU ONCE OPEN -->
-<!-- THIS IS THE MENU ONCE OPEN -->
-<!-- THIS IS THE MENU ONCE OPEN -->
-<!-- THIS IS THE MENU ONCE OPEN -->
+    <!-- THIS IS THE MENU ONCE OPEN -->
+    <!-- THIS IS THE MENU ONCE OPEN -->
+    <!-- THIS IS THE MENU ONCE OPEN -->
+    <!-- THIS IS THE MENU ONCE OPEN -->
+    <!-- THIS IS THE MENU ONCE OPEN -->
+    <!-- THIS IS THE MENU ONCE OPEN -->
 
 
     <div class="offcanvas offcanvas-start row" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
         aria-labelledby="offcanvasWithBothOptionsLabel" style="background-color: var(--PrimaryColor);width:90%;">
         <div class="offcanvas-header ">
 
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" style="padding: 20px;"   aria-label="Close"></button>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" style="padding: 20px;"
+                aria-label="Close"></button>
         </div>
         <div class=" container " id="removePadding" style="text-align: center; border-radius: 30px;">
-            <img class="mainLogo" src="img/main_logo.png" alt="logo" >
+            <img class="mainLogo" src="img/main_logo.png" alt="logo">
 
         </div>
 
@@ -136,23 +139,97 @@
 
     </div>
 
-<!-- ABOVE IS THE MENU ONCE OPEN -->
-<!-- ABOVE IS THE MENU ONCE OPEN -->
-<!-- ABOVE IS THE MENU ONCE OPEN -->
-<!-- ABOVE IS THE MENU ONCE OPEN -->
-<!-- ABOVE IS THE MENU ONCE OPEN -->
+    <!-- ABOVE IS THE MENU ONCE OPEN -->
+    <!-- ABOVE IS THE MENU ONCE OPEN -->
+    <!-- ABOVE IS THE MENU ONCE OPEN -->
+    <!-- ABOVE IS THE MENU ONCE OPEN -->
+    <!-- ABOVE IS THE MENU ONCE OPEN -->
 
 
-<!-- WRITE CODE BELOW HERE -->
-
-
+    <!-- WRITE CODE BELOW HERE -->
 
 
 
-<!-- WRITE CODE ABOVE HERE -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <center>
+
+
+
+        <div class="container horizontal-scrollable" id="">
+            <div class="horizontal-scrollableNavRow text-center"
+                style="overflow: scroll; padding-right: 15px; /* Hide scrollbars */">
+                <a href="trainingMainALL.html"><button class=" navButtons ">All</button></a>
+                <a href="trainingMainPENDING.html"><button class=" navButtons ">Pending</button></a>
+                <a href="trainingMainCOMPLETED.html"><button class=" CurrentNavButtons">Completed</button></a>
+
+            </div>
+        </div>
+    </center>
+
+
+
+    <div class="row">
+
+
+
+
+
+
+
+
+        <div class="col-lg cardDivCenter" >
+
+
+
+            <div class="card " id="centerItem" style="background-color: green;">
+                <img src="img/Training/IntroCourse.png" class="card-img-top" alt="...">
+                <div class="card-body " >
+
+                    <div class="progress" style="height: 15px;">
+                        <div class="progress-bar-striped bg-success" role="progressbar" style="width: 100%" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+
+                    <h5 class="card-title cardSubheadings " style="color: white;">Introduction to Latham Bakery</h5>
+                    <p class="card-text" style="color: white;">In this course, you will get an overview of Latham Bakery's history,
+                        values, and operational procedures. You will also learn about the range of products offered,
+                        including pastries, cakes, cupcakes, and lunch and dinner items.
+                    </p>
+                    <p class="subheadingText" style="color: white;">COURSE COMPLETE! ✅ </p>
+                </div>
+            </div>
+
+
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!-- WRITE CODE ABOVE HERE -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
