Training menu almost complete. All mapped need to make course example etc.

--- a/MENUTemplate.html
+++ b/MENUTemplate.html
@@ -40,6 +40,9 @@
             color: initial;
             text-decoration: inherit;
         }
+        .row{
+            margin: auto
+        }
         /* .mainLogo{
             max-width: 50%; height: auto;
             margin: auto;
