--- a/trainingMainCOMPLETED.html
+++ b/trainingMainCOMPLETED.html
@@ -43,6 +43,9 @@
             color: initial;
             text-decoration: inherit;
         }
+        .row{
+            margin: auto
+        }
 
 
         /* do not edit above */
