--- a/trainingMainPENDING.html
+++ b/trainingMainPENDING.html
@@ -45,7 +45,9 @@
             text-decoration: inherit;
         }
 
-
+        .row{
+            margin: auto
+        }
         /* do not edit above */
     </style>
 </head>
