--- a/trainingMainALL.html
+++ b/trainingMainALL.html
@@ -44,7 +44,9 @@
             color: initial;
             text-decoration: inherit;
         }
-
+        .row{
+            margin: auto
+        }
 
         /* do not edit above */
     </style>
@@ -188,7 +190,7 @@
                             aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
 
-                    <h5 class="card-title">Cake Decorator</h5>
+                    <h5 class="card-title cardSubheadings">Cake Decorator</h5>
                     <p class="card-text">In this course, employees will learn advanced cake decorating techniques,
                         including using piping bags and icing tools to create intricate designs. They will also be
                         trained in maintaining a clean workspace and ensuring the consistent quality of decorated cakes.
@@ -214,7 +216,7 @@
                             aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
 
-                    <h5 class="card-title">Food Prep Crash Course</h5>
+                    <h5 class="card-title cardSubheadings">Food Prep Crash Course</h5>
                     <p class="card-text">This training will cover essential food preparation skills, including proper
                         handling of ingredients, knife techniques, and maintaining a clean and organized workspace.
                         Employees will also learn the basics of cooking and assembling dishes to ensure high-quality
@@ -245,7 +247,7 @@
                             aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
     
-                    <h5 class="card-title">Cashier and Barista</h5>
+                    <h5 class="card-title cardSubheadings" >Cashier and Barista</h5>
                     <p class="card-text">In this course, employees will learn how to efficiently manage customer
                         transactions, operate the cash register, and provide excellent customer service. Additionally,
                         they will master the art of making coffee beverages using an espresso machine..</p>
