Final push tonight. fixed minor bugs

--- a/trainingMainALL.html
+++ b/trainingMainALL.html
@@ -159,8 +159,8 @@
             <div class="horizontal-scrollableNavRow text-center"
                 style="overflow: scroll; padding-right: 15px; /* Hide scrollbars */">
                 <a href="trainingMainALL.html"><button class=" CurrentNavButtons ">All</button></a>
-                <a href="trainingMainPENDING.html"><button class=" navButtons ">Pending</button></a>
-                <a href="trainingMainCOMPLETED.html"><button class=" navButtons">Completed</button></a>
+                <a href="trainingMainPENDING.html"><button class=" optionalNavButtons ">Pending</button></a>
+                <a href="trainingMainCOMPLETED.html"><button class=" optionalNavButtons">Completed</button></a>
 
             </div>
         </div>
@@ -283,8 +283,6 @@
 
         </div>
 
-        <div class="col-lg"></div>
-        <div class="col-lg"></div>
 
     </div>
 
