--- a/trainingMainCOMPLETED.html
+++ b/trainingMainCOMPLETED.html
@@ -160,8 +160,8 @@
         <div class="container horizontal-scrollable" id="">
             <div class="horizontal-scrollableNavRow text-center"
                 style="overflow: scroll; padding-right: 15px; /* Hide scrollbars */">
-                <a href="trainingMainALL.html"><button class=" navButtons ">All</button></a>
-                <a href="trainingMainPENDING.html"><button class=" navButtons ">Pending</button></a>
+                <a href="trainingMainALL.html"><button class=" optionalNavButtons ">All</button></a>
+                <a href="trainingMainPENDING.html"><button class=" optionalNavButtons ">Pending</button></a>
                 <a href="trainingMainCOMPLETED.html"><button class=" CurrentNavButtons">Completed</button></a>
 
             </div>
@@ -206,7 +206,7 @@
 
 
 
-
+        <div class="col-lg cardDivCenter" ></div>
 
 
 
