--- a/employeeWelcome.html
+++ b/employeeWelcome.html
@@ -146,7 +146,11 @@
                 <p class="sideBar">Cook Book</p>
             </a>
 
-            <a href="http://127.0.0.1:5500/index.html" id="removePadding">
+            <a href="policyGuide.html" id="removePadding">
+                <p class="sideBar">Policy Guide</p>
+            </a>
+
+            <a href="contactInfo.html" id="removePadding">
                 <p class="sideBar">Contact Info</p>
             </a>
         </div>
