--- a/trainingMainPENDING.html
+++ b/trainingMainPENDING.html
@@ -119,7 +119,7 @@
 
         </div>
 
-        <div class="offcanvas-body container row" style="padding-right: 0px;">
+<div class="offcanvas-body container row" style="padding-right: 0px;">
 
             <a href="myAccount.html" id="removePadding">
                 <p class="sideBar">My Account</p>
@@ -133,7 +133,11 @@
                 <p class="sideBar">Cook Book</p>
             </a>
 
-            <a href="http://127.0.0.1:5500/index.html" id="removePadding">
+            <a href="policyGuide.html" id="removePadding">
+                <p class="sideBar">Policy Guide</p>
+            </a>
+
+            <a href="contactInfo.html" id="removePadding">
                 <p class="sideBar">Contact Info</p>
             </a>
         </div>
