completed the video lesson and test. Just uploading for the night.

--- a/trainingMainPENDING.html
+++ b/trainingMainPENDING.html
@@ -199,7 +199,7 @@
                         including using piping bags and icing tools to create intricate designs. They will also be
                         trained in maintaining a clean workspace and ensuring the consistent quality of decorated cakes.
                     </p>
-                    <a href="#" class="btn btn-primary">Continue Course</a>
+                    <a href="videoLesson.html" class="btn btn-primary">Continue Course</a>
                 </div>
             </div>
 
@@ -225,7 +225,7 @@
                         handling of ingredients, knife techniques, and maintaining a clean and organized workspace.
                         Employees will also learn the basics of cooking and assembling dishes to ensure high-quality
                         food production.</p>
-                    <a href="#" class="btn btn-primary">Continue Course</a>
+                    <a href="videoLesson.html" class="btn btn-primary">Continue Course</a>
                 </div>
             </div>
 
@@ -252,7 +252,7 @@
                     <p class="card-text">In this course, employees will learn how to efficiently manage customer
                         transactions, operate the cash register, and provide excellent customer service. Additionally,
                         they will master the art of making coffee beverages using an espresso machine..</p>
-                    <a href="#" class="btn btn-primary">Continue Course</a>
+                    <a href="videoLesson.html" class="btn btn-primary">Continue Course</a>
                 </div>
             </div>
     
