--- a/myAccountCONFIRMATION.html
+++ b/myAccountCONFIRMATION.html
@@ -53,6 +53,7 @@
 
         .card {
             background-color: #fff;
+            margin-top: 100px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             padding: 20px;
